# interruptible-polling

./: Cargo.toml  README.md  cargo.toml
.github/workflows/: rust.yml
src/: common.rs  error.rs  fire_and_forget.rs  lib.rs  self_updating_task.rs  sync.rs  sync2.rs  task.rs  task2.rs  tokio.rs  variable_task.rs
src/sync/: common.rs  fire_and_forget.rs  self_updating_task.rs  task.rs  variable_task.rs
src/sync/tests/: fire_and_forget.rs  self_updating_task.rs  task.rs  variable_task.rs
src/sync2/tests/: self_updating_task.rs  task.rs  variable_task.rs
src/tokio/: common.rs  fire_and_forget.rs  self_updating_task.rs  task.rs  variable_task.rs
src/tokio/tests/: fire_and_forget.rs  self_updating_task.rs  task.rs  variable_task.rs
