[package]
name = "interruptible_polling"
description = "General purpose polling tasks with RAII-driven fast clean exits"
version = "0.3.0"
edition = "2021"
authors = ["Chris Henk <Chris.Henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LittleBoxOfSunshine/interruptible-polling"
readme = "README.md"
keywords = ["poll", "polling", "task"]

[features]
fire-forget = []

[dev-dependencies]
tokio = { version = "1.37.0", features = ["sync", "macros", "rt"] }
serde_json = "1.0.115"
