[package]
name = "interruptible_polling"
description = "General purpose polling tasks with RAII-driven fast clean exits"
version = "0.4.0"
edition = "2021"
authors = ["Chris Henk <Chris.Henk@unobtainium.software>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/LittleBoxOfSunshine/interruptible-polling"
readme = "README.md"
keywords = ["poll", "polling", "task", "sync", "async"]

[features]
default = []
tokio = ["dep:tokio"]

[dependencies]
thiserror = "2.0.9"
tokio = { version = "1.42.0", features = ["time"], optional = true }

[dev-dependencies]
tokio = { version = "1.42.0", features = ["sync", "macros", "rt"] }
